k8s/app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      containers:
      - image: elnoro/quickshare/app
        name: app
        ports:
        - containerPort: 8080
        resources: {}
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
      restartPolicy: Always
status: {}
