k8s/redis-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
    name: redis-master
    labels:
        app: redis
spec:
    selector:
        matchLabels:
            app: redis
            role: master
            tier: backend
    replicas: 1
    template:
        metadata:
            labels:
                app: redis
                role: master
                tier: backend
        spec:
            containers:
                - name: master
                  image: redis
                  resources:
                      requests:
                          cpu: 100m
                          memory: 100Mi
                  ports:
                      - containerPort: 6379
