k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: basic-ingress
    annotations:
        kubernetes.io/ingress.global-static-ip-name: "quickshare-webapp"
spec:
    backend:
        serviceName: app
        servicePort: 8080
